--- a/style.css
+++ b/style.css
@@ -125,6 +125,12 @@ html {
     width: 150px;
 }
 
+.gif-square {
+    margin-left: 120px;
+    height: 200px;
+    width: 200px;
+}
+
 #gameContainer {
     padding-bottom: 20px;
     display: grid;
